%%{init: {'themeVariables': {'fontSize': '18px', 'fontFamily': 'Segoe UI, Arial, sans-serif'}}}%%
erDiagram
    USER ||--o| INVESTOR_PROFILE : has
    USER ||--o| BUSINESSMAN_PROFILE : has
    USER ||--o{ POST : authors
    USER ||--o{ MATCH : "invests in"
    USER ||--o{ MATCH : receives
    USER ||--o{ CONVERSATION_USER : joins
    USER ||--o{ MESSAGE : sends
    USER ||--o{ REPORT : files
    POST ||--o{ MATCH : about
    CONVERSATION ||--|{ CONVERSATION_USER : includes
    CONVERSATION ||--o{ MESSAGE : contains
    REPORT }o..o| POST : "targets (polymorphic)"
    REPORT }o..o| USER : "targets (polymorphic)"

    USER {
        objectId _id PK
        string name
        string email UK
        string password
        enum role "admin investor businessman"
        enum status "pending active suspended blocked"
        bool isVerified
        string avatar
        string phone
        string location
        date createdAt
        date updatedAt
    }

    INVESTOR_PROFILE {
        objectId _id PK
        objectId userId FK, UK
        number investmentMin
        number investmentMax
        string preferredIndustries "array"
        enum investmentType "equity loan partnership"
        string bio
        string experience
        string pastInvestments "array"
        string documents "array"
    }

    BUSINESSMAN_PROFILE {
        objectId _id PK
        objectId userId FK, UK
        string companyName
        string industry
        enum businessStage "idea startup growth established"
        number fundingNeeded
        string businessPlanDoc
        string bio
    }

    POST {
        objectId _id PK
        objectId authorId FK
        enum authorRole
        enum type "investor_post business_post"
        string title
        string description
        string category "array"
        number budget
        string image
        enum status "active closed under_review"
        number likesCount
        number viewsCount
    }

    MATCH {
        objectId _id PK
        objectId investorId FK
        objectId businessmanId FK
        objectId postId FK "optional"
        enum status "pending accepted rejected finalized"
    }

    CONVERSATION {
        objectId _id PK
        string lastMessage
        date createdAt
        date updatedAt
    }

    CONVERSATION_USER {
        objectId conversationId PK, FK
        objectId userId PK, FK
    }

    MESSAGE {
        objectId _id PK
        objectId conversationId FK
        objectId senderId FK
        string text
        string attachments "array"
        bool seen
    }

    REPORT {
        objectId _id PK
        objectId reporterId FK
        enum targetType "post user"
        objectId targetId FK
        string reason
        enum status "pending reviewed resolved dismissed"
    }
